syntax = "proto3";

package stats.message;

option java_multiple_files = true;
option java_package = "ru.practicum.stats.proto";

enum ActionTypeProto {
  ACTION_VIEW = 0;
  ACTION_REGISTER = 1;
  ACTION_LIKE = 2;
}